syntax = "proto3";

package service.customer;

service CustomerService {
    rpc GetUserList (GetUserListReq) returns (GetUserListResp);
    rpc CreateUser (CreateUserReq) returns (CreateUserResp);
    rpc UpdateUser (UpdateUserReq) returns (UpdateUserResp);
    rpc DeleteUser (DeleteUserReq) returns (DeleteUserResp);
}

message GetUserListReq {
    int64 current = 1;
    int64 pageSize = 2;
}

message GetUserListResp {
    repeated UserListData result = 1;
}

message UserListData {
    int64 id = 1;
    string name = 2;
    int64 age = 3;
    int64 createTime = 4;
    int64 updateTime = 5;
    int64 deleteTime = 6;
    
}

message CreateUserReq {
    int64 id = 1;
    string name = 2;
    int64 age = 3;
    int64 createTime = 4;
    int64 updateTime = 5;
    int64 deleteTime = 6;
    
}

message CreateUserResp {

}

message UpdateUserReq {
    int64 id = 1;
    string name = 2;
    int64 age = 3;
    int64 createTime = 4;
    int64 updateTime = 5;
    int64 deleteTime = 6;
    
}

message UpdateUserResp {

}

message DeleteUserReq {
    int64 id = 1;
}

message DeleteUserResp {

}


